yaml/istio/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canaries-deploy-2
  labels:
    app: canaries
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canaries
  template:
    metadata:
      labels:
        app: canaries
        version: v2
    spec:
      containers:
      - name: canaries
        image: jyee/canary-deploy-basics:v2
        ports:
          - containerPort: 80
