yaml/istio/istio-destination-rule-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: canaries-destinationrule
spec:
  host: canaries
  subsets:
  - name: v1
    labels:
      version: v1
