yaml/istio/istio-virtualservice-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canaries-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - canaries-gateway
  http:
  - route:
    - destination:
        host: canaries
