yaml/istio/istio-virtualservice-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canaries-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - canaries-gateway
  http:
  - route:
    - destination:
        host: canaries
        subset: v1
      weight: 90
    - destination:
        host: canaries
        subset: v2
      weight: 10
