yaml/istio/istio-virtualservice-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canaries-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - canaries-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Firefox.*"
    route:
    - destination:
        host: canaries
        subset: v1
  - route:
    - destination:
        host: canaries
        subset: v2
